[package]
name = "geo-to-decart"
version = "0.1.0"
edition = "2021"
authors = ["Pavlo Mostovoi <pavelmostovoy@gmail.com>"]
description = "Geo coordinates conversion to local ENU/ECEF for small areas"
license = "MIT"
repository = "https://github.com/PavelMostovoy/geo-to-decart.git"
readme = "README.md"
keywords = ["geo","coorginates","conversion"]
categories = ["science::geo"]
exclude = [
    ".idea/*",
]

[lib]
name = "geo_to_decart"
path = "src/lib.rs"

[dependencies]
